--- a/content/projects/mumarinventory.mdx
+++ b/content/projects/mumarinventory.mdx
@@ -20,11 +20,10 @@ Mumar Inventory is a modern inventory management system that helps businesses st
 - **Routing**: It simplifies routing with a file-based system, allowing easy navigation between different sections of the inventory management system.
 - **API Routes**: Next.js allows the creation of API routes, which can be used for backend functionalities, such as managing inventory data.
 
-## Sanity
-
-- **Headless CMS**: Sanity serves as the content management system, allowing administrators to easily manage inventory data and other content.
-- **Real-time Editing**: With Sanity, updates to inventory items can be made in real-time, reflecting changes immediately in the system.
-- **Structured Content**: Sanity enables structured content modeling, allowing for flexible and reusable components throughout the inventory system.
+## Supabase
+- **Database**: Supabase is built on PostgreSQL, a powerful, open-source relational database system.
+- **Authentication**: Robust authentication system that supports multiple providers.
+ 
 
 ## TypeScript
 
@@ -40,19 +39,14 @@ Mumar Inventory is a modern inventory management system that helps businesses st
 ## Integration and Functionality
 
 ### Key Features
-
 - **User-Friendly Interface**: The system is designed to be intuitive, making it easy for users to manage inventory items efficiently.
 - **Admin Login**: Administrators can log in using the following credentials:
   - **Email**: suleman_raji@yahoo.com
   - **Password**: gr8oxby
 - **Performance Optimization**: Next.js enhances loading times through server-side rendering and static site generation, ensuring users have a fast experience.
-
 ### Inventory Management
 
 - **Real-time Updates**: Users can add, update, and delete inventory items seamlessly, ensuring that the inventory data is always up-to-date.
 - **Data Visualization**: The system provides visual insights into inventory levels, helping businesses make informed decisions.
 - **Custom Reports**: Users can generate custom reports based on their inventory data, allowing for better analysis and planning.
 
-## Conclusion
-
-Combining Next.js, Sanity, TypeScript, and Tailwind CSS allows Mumar Inventory to deliver a powerful, user-friendly, and efficiently maintainable inventory management system. This tech stack enhances performance and provides administrators with the tools they need to manage inventory effectively, ensuring that businesses can operate smoothly and efficiently.
