--- a/content/projects/refreeg.mdx
+++ b/content/projects/refreeg.mdx
@@ -4,7 +4,7 @@ description: Refreeg is a crowdfunding platform building Africa one community at
 date: "2024-09-01"
 url: https://refreeg.com
 published: true
-repository: raji2004/Refreeg
+repository: JULIUSANGULU/Refreeg
 ---
 
 [![Refreeg Screenshot](https://firebasestorage.googleapis.com/v0/b/swift-a58a0.appspot.com/o/Screenshot%20(458).png?alt=media&token=f6239ca0-1e81-4011-9192-a62e2efa0b92)](https://refreeg.com)
